bugfix: 모임 테스트 데이터 변경 (#137)